<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        >
        <TextView
            android:id="@+id/pizzaProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizzaProfile"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:typeface="sans"
            />
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/headerBackground"
            >
            <TextView
                android:id="@+id/createAccountNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/nameText"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />
            <EditText
                android:id="@+id/createAccountNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:inputType="text"
                android:background="@android:color/transparent"

                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        >
        <TextView
            android:id="@+id/createAccountEmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/emailId"
            android:textColor="#ffffff"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/createAccountEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffffff"
            android:background="@android:color/transparent"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        >
        <TextView
            android:id="@+id/createAccountPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/createAccountPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:textColorHighlight="#ffffff"
            android:background="@android:color/transparent"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        >
        <TextView
            android:id="@+id/createAccountPhoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/phoneNumber"
            android:textColor="#ffffff"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/createAccountPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:inputType="phone"
            android:textColorHighlight="#ffffff"
            android:background="@android:color/transparent"

            />


    </LinearLayout>

    <TextView
        android:id="@+id/errorText"
        android:textColor="@color/headerBackground"
        android:text="@string/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpButton"
        android:text="@string/singUpButton"
        android:background="@color/questionColor"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:onClick="createAccountMethod"
        />
</LinearLayout>