<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        >
        <TextView
            android:id="@+id/deliveryAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryAddress"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:typeface="sans"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/belowTopPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/headerBackground"
        >
        <Button
            android:id="@+id/singInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="#ffffff"
            android:text="@string/singInButton"
            android:textColor="@color/questionColor"
            android:onClick="signInMethod"
            />
        <TextView
            android:id="@+id/signInRequest"
            android:layout_toRightOf="@id/singInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInRequest"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:layout_margin="15dp"
            android:typeface="sans"
            />
        <TextView
            android:id="@+id/WelcomeNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="Welcome!"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/headerBackground"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/streetText"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/aptText"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cityText"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/stateText"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/zipcodeText"
                android:textColor="#ffffff"
                android:textSize="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/streetNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffff"
                android:inputType="text"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                />


            <EditText
                android:id="@+id/aptNumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffff"
                android:inputType="text"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                />


            <EditText
                android:id="@+id/cityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffff"
                android:inputType="text"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                />


            <EditText
                android:id="@+id/stateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffff"
                android:inputType="text"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                />


            <EditText
                android:id="@+id/zipCodeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffff"
                android:inputType="text"
                android:textSize="20dp"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/showFaviourites"
            android:text="Show faviourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/questionColor"
            android:onClick="showFaviouriteMethod"
            />
        <CheckBox
            android:id="@+id/saveAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/saveAddress"
            android:textColor="@color/questionColor"
            android:visibility="visible"
            android:onClick="saveAddressMethod"
            />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deliveryContinueButton"
        android:text="@string/deliveryContinueButton"
        android:background="@color/questionColor"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:onClick="continueDelivery"
        />

</LinearLayout>