<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        >
        <TextView
            android:id="@+id/pizzaProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInText"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:typeface="sans"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/headerBackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/emailId"
            android:textColor="#ffffff"
            android:textSize="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:inputType="text"
            android:textColorHint="#ffffff"
            android:background="@android:color/transparent"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signInButton"
        android:text="@string/singInButton"
        android:background="@color/questionColor"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:onClick="signInMethod"
        />

</LinearLayout>